answer codes fixes, split some methods, fix codes for tsoa
