# src/api/controllers/permissions.ts
@@ -1,10 +1,11 @@
-import { Controller, Route, Security, Get, Request, Tags } from 'tsoa';
+import { Controller, Route, Security, Get, Request, Tags, Response } from 'tsoa';
 import { Permissions } from '../../models/permissions';
 import { IError } from '../../core/types';
 import { PermissionsService } from '../../services/permissions';
 import Container from 'typedi';
 import { Errors } from '../../utils/errors';
 import { User } from '../../models/user';
+import { CodeError } from '../../utils/error-with-code';
 
 @Tags('Permissions')
 @Route('/permissions')
@@ -16,17 +17,17 @@ export class PermissionsController extends Controller {
     this.service = Container.get(PermissionsService);
   }
 
+  @Response<IError>('500', 'Ошибка получения прав из базы')
   @Get()
   public async getAll(
     @Request() req: Express.Request,
-  ): Promise<Permissions[] | IError> {
+  ): Promise<Permissions[]> {
     try {
       return await this.service.getAll((req.user as User).id);
     } catch (err) {
-      return {
-        code: Errors.SERVICE_ERROR,
-        message: err.message,
-      };
+      throw new CodeError(Errors.SERVICE_ERROR,
+        500,
+        err.message);
     }
   }
 }
